[package]
name = "examples"
version = "0.0.0"
license = ""
authors = ["<>"]
edition = "2021"

[dependencies]
libpag = { package = "libpag", path = "../pag" }
gst-pag = { package = "gst-pag", path = "../gst-pag" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-player = { package = "gstreamer-player", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

skia-safe = "0"
anyhow = "1.0"
derive_more = "0.99.5"
glutin = { version = "0.29", optional = true }
once_cell = "1.0"
image = { version = "0.24" }
futures = { version = "0.3", features = ["executor"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]