[package]
name = "examples"
version = "0.0.0"
license = ""
authors = ["<>"]
edition = "2021"

[dependencies]
libpag = { package = "libpag", path = "../pag" }
gst-pag = { package = "gst-pag", path = "../gst-pag" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-app = { package = "gstreamer-app", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-player = { package = "gstreamer-player", git = "https://github.com/sdroege/gstreamer-rs.git" }

skia-safe = "0"
anyhow = "1.0"
derive_more = "0.99.5"
glutin = { version = "0.29", optional = true }
once_cell = "1.0"
image = { version = "0.24" }
futures = { version = "0.3", features = ["executor"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]