[package]
name = "gst-pag"
version = "0.0.0"
authors = ["lj"]
repository = "gst-pag.git"
license = "MIT"
edition = "2021"
rust-version = "1.66"
description = "GStreamer Pag Plugin"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-app = { package = "gstreamer-app", git = "https://github.com/sdroege/gstreamer-rs.git" }
gst-player = { package = "gstreamer-player", git = "https://github.com/sdroege/gstreamer-rs.git" }
byte-slice-cast = "1.0"
num-traits = "0.2"
once_cell = "1.0"
libpag = { package = "libpag", path = "../pag" }
anyhow = "1.0"
derive_more = "0.99.5"
lazy_static = "1.4.0"

[lib]
name = "gstpagsrc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://github.com/sdroege/gst-plugin-rs.git" }