[package]
name = "node-pag"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpag = { package = "libpag", path = "../pag" }
gst-pag = { package = "gst-pag", path = "../gst-pag" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "task-api", "channel-api"]
