[package]
name = "libpag"
version = "0.0.0"
authors = [""]
categories = ["libpag", "pag"]
description = "Rust bindings for libpag"
repository = ""
license = ""
readme = "README.md"
homepage = ""
documentation = ""
keywords = ["pag", "libpag", "rust pag", "rust libpag"]
edition = "2021"
rust-version = "1.66"

[dependencies]
ffi = { package = "libpag-sys", path = "../ffi" }

lazy_static = "1.4.0"
cfg-if = "1.0"
libc = "0.2"
once_cell = "1.0"
thiserror = "1"
cxx = "1.0"
autocxx = "0.22.3"

[dev-dependencies]

[features]